# broken

./: .cursorignore  .gitignore  CMakeLists.txt  CMakeSettings.json  ColliderSystem_Analysis.md  EventSystem_Upgrade_Summary.md  EventSystem_Usage.md  Gun_Framework_Analysis.md  cmake_install.cmake  readme.md  项目规划.md
.cursor/rules/: my-rules.mdc
broken.dir/Release/: broken.exe.recipe
broken.dir/Release/broken.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
jsons/: item_template.txt  items.json
libs/SDL3/lib/: SDL3.lib  SDL3_test.lib
libs/SDL3_ttf/lib/: SDL3_ttf.lib
src/: Action.cpp  Action.h  ActionQueue.cpp  ActionQueue.h  Ammo.cpp  Ammo.h  AttackSystem.cpp  AttackSystem.h  Bullet.cpp  Bullet.h  Collider.cpp  Collider.h  Constants.h  Creature.cpp  Creature.h  CreatureAttack.cpp  CreatureAttack.h  CustomWeaponEffects.cpp  Damage.cpp  Damage.h  DamageNumber.cpp  DamageNumber.h  DragDropSystem.cpp  DragDropSystem.h  Entity.cpp  Entity.h  EntityFlag.h  EntityState.h  EntityStateEffect.cpp  EntityStateEffect.h  EntityStateManager.cpp  EntityStateManager.h  EquipmentSystem.cpp  EquipmentSystem.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventTest.cpp  FlagMapper.cpp  (+67 more)
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
